Added a button to my work

--- a/dashboard.html
+++ b/dashboard.html
@@ -58,12 +58,8 @@
                                         <a href="https://www.instagram.com/accounts/login/?hl=en"
                                             class="fa fa-instagram"></a>
                                     </div>
-                                    <!-- <input id='sign up' class='ghost-round full-width' onclick="validate()" name=""
-                                        type="submit" value="submit"> -->
-                                    <button><a href="index.html">Submit</a></button>
-                                    <!-- <div class='message'>
-                                        <p>Invalid name and number</p>
-                                    </div> -->
+                                        <input id='sign up' class='ghost-round full-width' onclick="validate()" name=""
+                                        type="submit" value="Submit">
                                 </div>
                             </div>
                         </div>
@@ -80,6 +76,7 @@
                 Expert in manicure,pedicure and massage
                 </textarea>
             </div>
+            <button><a href="index.html">Next</a></button>
         </div>
 </body>
 </center>
