--- a/dashboard.html
+++ b/dashboard.html
@@ -58,7 +58,7 @@
                                         <a href="https://www.instagram.com/accounts/login/?hl=en"
                                             class="fa fa-instagram"></a>
                                     </div>
-                                        <input id='sign up' class='ghost-round full-width' onclick="validate()" name=""
+                                    <input id='sign-up' class='ghost-round full-width' onclick="validate()" name=""
                                         type="submit" value="Submit">
                                 </div>
                             </div>
