Place all images of stylists in their respective profiles and configure the images to fit within the available card space

--- a/services.html
+++ b/services.html
@@ -38,6 +38,7 @@
                                 <div class="card-title">
                                   <h4>FACIAL AND SKIN CARE</h4>
                                 </div>
+                                <img class="pl-5" src="./images/facial.jpeg" alt="" />
                                 <div class="card-body">
                                   <h4>Care Options</h4>
                                   <ul class="list">
@@ -54,6 +55,7 @@
                                 <div class="card-title">
                                   <h4>HAIR CARE</h4>
                                 </div>
+                                <img class="pl-5" src="./images/haircare.jpg" alt="" />
                                 <div class="card-body">
                                   <h4>Care Options</h4>
                                   <ul class="list">
@@ -70,6 +72,7 @@
                                 <div class="card-title">
                                   <h4>MANICARE AND PEDICARE</h4>
                                   </div>
+                                  <img class="pl-5" src="./images/manicare.jpeg" alt="" />
                                 <div class="card-body">
                                   <h4>Care Options</h4>
                                   <ul class="list">
@@ -100,7 +103,7 @@
                                 </div>
                                 <div class="card-body">
                                   <div id="facial">
-                                    <img class="pl-5" src="./images/Hawaaianpizza.jpg" alt="" />
+                                    <img class="pl-5" src="./images/stylist7.jpg" alt="" />
                                   <h4>Profile</h4>
                                   <ul class="list">
                                     <li>Name:  Maggie Chebet</li>
@@ -120,7 +123,7 @@
                                   <h4>Stylist Annie D</h4>
                                   </div>
                                 <div class="card-body">
-                                  <img class="pl-5" src="./images/Hawaaianpizza.jpg" alt="" />
+                                  <img class="pl-5" src="./images/stylist1.jpeg" alt="" />
                                   <h4>Profile</h4>
                                   <ul class="list">
                                       <li>Name:  Annie Denila</li>
@@ -139,7 +142,7 @@
                                   <h4>Stylist Mimo T</h4>
                                   </div>
                                 <div class="card-body">
-                                    <img class="pl-5" src="./images/Hawaaianpizza.jpg" alt="" />  
+                                    <img class="pl-5" src="./images/stylist2.jpeg" alt="" />  
                                     <h4>Profile</h4>
                                     <ul class="list">
                                       <li>Name: Terry Wairimu</li>
@@ -166,7 +169,7 @@
                                   <h4>Frankie D</h4>
                                 </div>
                                 <div class="card-body">
-                                    <img class="pl-5" src="./images/Hawaaianpizza.jpg" alt="" />
+                                    <img class="pl-5" src="./images/stylist3.png" alt="" />
                                     <h4>Profile</h4>
                                     <ul class="list">
                                       <li>Name:  Frank Dimathiu</li>
@@ -185,7 +188,7 @@
                                   <h4>Gina H</h4>
                                 </div>
                                 <div class="card-body">
-                                    <img class="pl-5" src="./images/Hawaaianpizza.jpg" alt="" />
+                                    <img class="pl-5" src="./images/stylistmale.jpeg" alt="" />
                                     <h4>Profile</h4>
                                     <ul class="list" >
                                       <li>Name: Gina Habibi</li>
@@ -204,7 +207,7 @@
                                   <h4>Jackie L</h4>
                                   </div>
                                 <div class="card-body">
-                                    <img class="pl-5" src="./images/Hawaaianpizza.jpg" alt="" />
+                                    <img class="pl-5" src="./images/stylist4.jpg" alt="" />
                                     <h4>Profile</h4>
                                     <ul class="list">
                                       <li>Name: Jackie Lepesila</li>
@@ -230,7 +233,7 @@
                                   <h4>Sally K</h4>
                                 </div>
                                 <div class="card-body">
-                                    <img class="pl-5" src="./images/Hawaaianpizza.jpg" alt="" />
+                                    <img class="pl-5" src="./images/stylist5.jpg" alt="" />
                                     <h4>Profile</h4>
                                     <ul class="list">
                                       <li>Name:  Sally Kibi</li>
@@ -249,7 +252,7 @@
                                   <h4>Betty V</h4>
                                 </div>
                                 <div class="card-body">
-                                    <img class="pl-5" src="./images/Hawaaianpizza.jpg" alt="" />
+                                    <img class="pl-5" src="./images/stylist6.png" alt="" />
                                     <h4>Profile</h4>
                                     <ul class="list">
                                       <li>Name: Betty Vasula</li>
@@ -257,7 +260,7 @@
                                       <li>Rates:  Premium</li>
                                       <li>Availability:  Weekends</li>
                                       <li>Rating: 5/5</li>
-                                      <li>Contacts:  Tel-05608328</li>
+                                      <li>Contacts:  Tel-0756897657</li>
                                     </ul>
                                  </div>
                               </div>
@@ -268,7 +271,7 @@
                                   <h4>Vera S</h4>
                                   </div>
                                 <div class="card-body">
-                                  <img class="pl-5" src="./images/Hawaaianpizza.jpg" alt="" />
+                                  <img class="pl-5" src="./images/stylist9.jpg" alt="" />
                                     <h4>Profile</h4>
                                     <ul class="list">
                                       <li>Name:  Vera Sidika</li>
