--- a/customersignup.html
+++ b/customersignup.html
@@ -53,7 +53,7 @@
                                 <input id="submit" class='ghost-round full-width' onclick="validate()" name=""
                                     type="submit" value="Submit"> <a href="services.html"></a> </input>
                                 <p>Not a <strong>client?</strong> Access the stylist <a
-                                        href="index.html"><strong>here</strong></a></p>
+                                        href="services.html"><strong>here</strong></a></p>
                                 <hr>
                                 <p class="or">OR</p>
                                 <p>Do you have an account?</p>
