changed submit button to submit link in both dashboard.html and services.html

--- a/stylistsignup.html
+++ b/stylistsignup.html
@@ -47,14 +47,14 @@
                                 <input type="radio" name="gender" value="other">Other<br>
                                 <p><span><input type="checkbox"></span>I agree to the terms of
                                     services</p>
-                                <input  id="submit" class='ghost-round full-width' onclick="validate()" name=""
-                                    type="submit" value="Submit"> <a href="dashboard.html"></a> </input>
+                                <!-- <input  id="submit" class='ghost-round full-width' onclick="validate()" name=""
+                                    type="submit" value="Submit"> <a href="dashboard.html"></a> </input> -->
                                 <!-- <div id="message">
                                     <p>Invalid Username and password</p>
                                 </div> -->
 
-                                <p>Not a <strong>stylist?</strong> Access the client <em>sign up</em> <a
-                                        href="customersignup.html"><strong>here</strong></a></p>
+                                <p>To access <strong>the profile</strong> click here <em></em> <a
+                                        href="dashboard.html"><strong>submit</strong></a></p>
                                 <hr>
                                 <p class="or">OR</p>
                                 <p>Do you have an account?</p>
