--- a/customersignup.html
+++ b/customersignup.html
@@ -50,10 +50,10 @@
                                 <input type="radio" name="gender" value="other">Other<br>
                                 <p><span><input type="checkbox"></span>I agree to the terms of
                                     services</p>
-                                <input id="submit" class='ghost-round full-width' onclick="validate()" name=""
-                                    type="submit" value="Submit"> <a href="services.html"></a> </input>
-                                <p>Not a <strong>client?</strong> Access the stylist <a
-                                        href="stylistsignup.html"><strong>here</strong></a></p>
+                                <!-- <input id="submit" class='ghost-round full-width' onclick="validate()" name=""
+                                    type="submit" value="Submit"> <a href="services.html"></a> </input> -->
+                                <p>To access services</strong> click here <a
+                                        href="services.html"><strong>submit</strong></a></p>
                                 <hr>
                                 <p class="or">OR</p>
                                 <p>Do you have an account?</p>
