Edited the stylist photo

--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,7 @@
                 <div class="subtitle"><strong>Stylist Profile</strong></div>
                 <form class="input">
                     <div class="input-fields">
-                        <img src="images/mystyle.jpg" alt="stylist" style="width:100%">
+                        <img src="images/stylist6.png" alt="stylist" style="width:100%">
                         <div novalidate>
                             <div class="row">
                                 <div class="col-md-6">
@@ -34,11 +34,11 @@
                                                 <h8>First Name</h8>
                                             </b></label><br>
                                         <input type="text" placeholder="First Name" class="user_name" id='fname'
-                                            value="Wangari" required></input><br><br>
+                                            value="Betty" required></input><br><br>
                                         <label for="text"><b>
                                                 <h8>Last Name</h8>
                                             </b></label><br>
-                                        <input type="text" placeholder="Last Name" name="name" id='lname' value="Mwangi"
+                                        <input type="text" placeholder="Last Name" name="name" id='lname' value="Vasula"
                                             required><br><br>
                                         <label for="phone"><b>
                                                 <h8>Phone Number</h8>
@@ -58,7 +58,7 @@
                                         <a href="https://www.instagram.com/accounts/login/?hl=en"
                                             class="fa fa-instagram"></a>
                                     </div>
-                                    <input id='sign-up' class='ghost-round full-width' onclick="validate()" name=""
+                                        <input id='sign-up' class='ghost-round full-width' onclick="validate()" name=""
                                         type="submit" value="Submit">
                                 </div>
                             </div>
